removed superflous comments

--- a/public/create/stylesets/book-color.css
+++ b/public/create/stylesets/book-color.css
@@ -227,7 +227,7 @@ h6 {
 }
 
 
-/*Name: Paragraph*/
+/*Name: Body text*/
 p {
 	font-family: "Junicode", serif;
 	font-style:normal;
@@ -396,8 +396,6 @@ img {
 }
 
 /*Insert: Table*/
-
-/*Name: Table heading*/
 th {
 	font-family: "Junicode", serif;
 	font-style:normal;
@@ -410,7 +408,7 @@ th {
 	padding: .5em;
 }
 
-/*Name: Table cells*/
+
 td {
 	font-family: "Junicode", serif;
 	font-style:normal;
