--- a/public/create/stylesets/light-bw.css
+++ b/public/create/stylesets/light-bw.css
@@ -205,7 +205,7 @@ h6 {
 }
 
 
-/*Name: Paragraph*/
+/*Name: Body text*/
 p {
 	font-family: "Rambla", sans-serif;
 	font-style:normal;
@@ -377,7 +377,7 @@ img {
 
 /*Insert: Table*/
 
-/*Name: Table heading*/
+
 th {
 	font-family: "Rambla", sans-serif;
 	font-style:normal;
@@ -390,7 +390,7 @@ th {
 	padding: .5em;
 }
 
-/*Name: Table cells*/
+
 td {
 	font-family: "Rambla", sans-serif;
 	font-style:normal;
