--- a/public/create/stylesets/book-bw.css
+++ b/public/create/stylesets/book-bw.css
@@ -227,7 +227,7 @@ h6 {
 }
 
 
-/*Name: Paragraph*/
+/*Name: Body text*/
 p {
 	font-family: "Junicode", serif;
 	font-style:normal;
@@ -392,7 +392,7 @@ img {
 
 /*Insert: Table*/
 
-/*Name: Table heading*/
+
 th {
 	font-family: "Junicode", serif;
 	font-style:normal;
@@ -405,7 +405,7 @@ th {
 	padding: .5em;
 }
 
-/*Name: Table cells*/
+
 td {
 	font-family: "Junicode", serif;
 	font-style:normal;
