--- a/public/create/stylesets/draft-bw.css
+++ b/public/create/stylesets/draft-bw.css
@@ -111,7 +111,7 @@ h6 {
 }
 
 
-/*Name: Paragraph*/
+/*Name: Body text*/
 p {
 	font-family: "Courier Prime", Courier, monospace;
 	font-style:normal;
@@ -281,7 +281,7 @@ img {
 
 /*Insert: Table*/
 
-/*Name: Table heading*/
+
 th {
 	font-family: "Courier Prime", Courier, monospace;
 	font-style:normal;
@@ -294,7 +294,7 @@ th {
 	padding: .5em;
 }
 
-/*Name: Table cells*/
+
 td {
 	font-family: "Courier Prime", Courier, monospace;
 	font-style:normal;
