--- a/public/create/stylesets/future-color.css
+++ b/public/create/stylesets/future-color.css
@@ -216,7 +216,7 @@ h6 {
 }
 
 
-/*Name: Paragraph*/
+/*Name: Body text*/
 p {
 	font-family: "Roboto", sans-serif;
 	font-style:normal;
@@ -387,7 +387,7 @@ img {
 
 /*Insert: Table*/
 
-/*Name: Table heading*/
+
 th {
 	font-family: "Roboto", sans-serif;
 	font-style:normal;
@@ -400,7 +400,7 @@ th {
 	padding: .5em;
 }
 
-/*Name: Table cells*/
+
 td {
 	font-family: "Roboto", sans-serif;
 	font-style:normal;
