changen 0em to 0. removed some empty lines

--- a/public/create/stylesets/book-color.css
+++ b/public/create/stylesets/book-color.css
@@ -291,7 +291,7 @@ a:active { color: #CD7400; text-decoration:underline; }
 	text-indent:0;
 	color:#CD7400;
 	background:#000000;
-	margin:1.5em 20% 0em 20%;
+	margin:1.5em 20% 0 20%;
 	padding:1em;
 }
 
@@ -313,7 +313,7 @@ figcaption {
 	font-weight:400;
 	font-size:.9em;
 	line-height:1.64;
-	margin:.3em 0em 0em 0em;
+	margin:.3em 0 0 0;
 }*/
 
 /*Name: Author*/
