--- a/public/create/stylesets/pleasant-color.css
+++ b/public/create/stylesets/pleasant-color.css
@@ -270,7 +270,7 @@ a:active { color: #ffffff; text-decoration:none; }
 	text-indent:0;
 	color:#33CCFF;
 	background:#000000;
-	margin:1.5em 30% 0em 20%;
+	margin:1.5em 30% 0 20%;
 	padding:1em;
 }
 
@@ -292,7 +292,7 @@ figcaption {
 	font-weight:400;
 	font-size:.9em;
 	line-height:1.64;
-	margin:.3em 0em 0em 0em;
+	margin:.3em 0 0 0;
 }*/
 
 /*Name: Author*/
