--- a/public/create/stylesets/draft-bw.css
+++ b/public/create/stylesets/draft-bw.css
@@ -135,11 +135,7 @@ blockquote {
 	font-size:1.4em;
 	line-height:1.42;
 	color:#000000;
-
-	
-	
 /*Margin-left and right is defined in %, as it then becomes relative to width, which is important for responsive design to e.g. mobile phones.*/
-
 	margin:1.5em 30% 1.5em 10%;
 	page-break-inside:avoid;
 }
@@ -161,7 +157,6 @@ a {
 
 a:link { color: #000000; text-decoration:underline; }
 a:visited { color: #000000; text-decoration:underline; }
-
 a:hover { color: #000000; text-decoration:underline; }
 a:active { color: #000000; text-decoration:underline; }
 
@@ -175,7 +170,7 @@ a:active { color: #000000; text-decoration:underline; }
 	text-indent:0;
 	color:#ffffff;
 	background:#000000;
-	margin:1.5em 40% 0em 0em;
+	margin:1.5em 40% 0 0;
 	padding:1em;
 }
 
@@ -197,7 +192,7 @@ figcaption {
 	font-weight:400;
 	font-size:.9em;
 	line-height:1.64;
-	margin:.3em 0em 0em 0em;
+	margin:.3em 0 0 0;
 }*/
 
 /*Name: Author*/
