--- a/public/create/stylesets/book-bw.css
+++ b/public/create/stylesets/book-bw.css
@@ -18,42 +18,42 @@
 	font-family:"Source Code Pro";
 	font-style:normal;
 	font-weight:200;
-	src : url("/Fonts/sourcecodeproextralight.otf");
+	src : url("Fonts/sourcecodeproextralight.otf");
 }
 
 @font-face {
 	font-family:"Source Code Pro";
 	font-style:normal;
 	font-weight:300;
-	src : url("/Fonts/sourcecodeprolight.otf");
+	src : url("Fonts/sourcecodeprolight.otf");
 }
 
 @font-face {
 	font-family:"Source Code Pro";
 	font-style:normal;
 	font-weight:400;
-	src : url("/Fonts/sourcecodeproregular.otf");
+	src : url("Fonts/sourcecodeproregular.otf");
 }
 
 @font-face {
 	font-family:"Source Code Pro";
 	font-style:normal;
 	font-weight:600;
-	src : url("/Fonts/sourcecodeprosemibold.otf");
+	src : url("Fonts/sourcecodeprosemibold.otf");
 }
 
 @font-face {
 	font-family:"Source Code Pro";
 	font-style:normal;
 	font-weight:700;
-	src : url("/Fonts/sourcecodeprobold.otf");
+	src : url("Fonts/sourcecodeprobold.otf");
 }
 
 @font-face {
 	font-family:"Source Code Pro";
 	font-style:normal;
 	font-weight:900;
-	src : url("/Fonts/sourcecodeproblack.otf");
+	src : url("Fonts/sourcecodeproblack.otf");
 }
 
 /*JUNICODE*/
@@ -62,28 +62,28 @@
 	font-family:"Junicode";
 	font-style:normal;
 	font-weight:400;
-	src : url("/Fonts/junicode.ttf");
+	src : url("Fonts/junicode.ttf");
 }
 
 @font-face {
 	font-family: "Junicode";
 	font-style:italic;
 	font-weight:400;
-	src : url("/Fonts/junicodeitalic.ttf");
+	src : url("Fonts/junicodeitalic.ttf");
 }
 
 @font-face {
 	font-family: "Junicode";
 	font-style:normal;
 	font-weight:700;
-	src : url("/Fonts/junicodebold.ttf");
+	src : url("Fonts/junicodebold.ttf");
 }
 
 @font-face {
 	font-family: "Junicode";
 	font-style:italic;
 	font-weight:700;
-	src : url("/Fonts/junicodebolditalic.ttf");
+	src : url("Fonts/junicodebolditalic.ttf");
 }
 
 /*OPEN SANS*/
@@ -92,70 +92,70 @@
 	font-family: "Open Sans";
 	font-style:normal;
 	font-weight:300;
-	src : url("/Fonts/opensanslight.ttf");
+	src : url("Fonts/opensanslight.ttf");
 }
 
 @font-face {
 	font-family: "Open Sans";
 	font-style:italic;
 	font-weight:300;
-	src : url("/Fonts/opensanslightitalic.ttf");
+	src : url("Fonts/opensanslightitalic.ttf");
 }
 
 @font-face {
 	font-family: "Open Sans";
 	font-style:normal;
 	font-weight:400;
-	src : url("/Fonts/opensansregular.ttf");
+	src : url("Fonts/opensansregular.ttf");
 }
 
 @font-face {
 	font-family: "Open Sans";
 	font-style:italic;
 	font-weight:400;
-	src : url("/Fonts/opensansitalic.ttf");
+	src : url("Fonts/opensansitalic.ttf");
 }
 
 @font-face {
 	font-family: "Open Sans";
 	font-style:normal;
 	font-weight:600;
-	src : url("/Fonts/opensanssemibold.ttf");
+	src : url("Fonts/opensanssemibold.ttf");
 }
 
 @font-face {
 	font-family: "Open Sans";
 	font-style:italic;
 	font-weight:600;
-	src : url("/Fonts/opensanssemibolditalic.ttf");
+	src : url("Fonts/opensanssemibolditalic.ttf");
 }
 
 @font-face {
 	font-family: "Open Sans";
 	font-style:normal;
 	font-weight:700;
-	src : url("/Fonts/opensansbold.ttf");
+	src : url("Fonts/opensansbold.ttf");
 }
 
 @font-face {
 	font-family: "Open Sans";
 	font-style:italic;
 	font-weight:700;
-	src : url("/Fonts/opensansbolditalic.ttf");
+	src : url("Fonts/opensansbolditalic.ttf");
 }
 
 @font-face {
 	font-family: "Open Sans";
 	font-style:normal;
 	font-weight:800;
-	src : url("/Fonts/opensansextrabold.ttf");
+	src : url("Fonts/opensansextrabold.ttf");
 }
 
 @font-face {
 	font-family: "Open Sans";
 	font-style:italic;
 	font-weight:800;
-	src : url("/Fonts/opensansextrabolditalic.ttf");
+	src : url("Fonts/opensansextrabolditalic.ttf");
 }
 
 /*STYLES*/
