--- a/public/create/stylesets/open-color.css
+++ b/public/create/stylesets/open-color.css
@@ -18,70 +18,70 @@
 	font-family: "Open Sans";
 	font-style:normal;
 	font-weight:300;
-	src : url("/Fonts/opensanslight.ttf");
+	src : url("Fonts/opensanslight.ttf");
 }
 
 @font-face {
 	font-family: "Open Sans";
 	font-style:italic;
 	font-weight:300;
-	src : url("/Fonts/opensanslightitalic.ttf");
+	src : url("Fonts/opensanslightitalic.ttf");
 }
 
 @font-face {
 	font-family: "Open Sans";
 	font-style:normal;
 	font-weight:400;
-	src : url("/Fonts/opensansregular.ttf");
+	src : url("Fonts/opensansregular.ttf");
 }
 
 @font-face {
 	font-family: "Open Sans";
 	font-style:italic;
 	font-weight:400;
-	src : url("/Fonts/opensansitalic.ttf");
+	src : url("Fonts/opensansitalic.ttf");
 }
 
 @font-face {
 	font-family: "Open Sans";
 	font-style:normal;
 	font-weight:600;
-	src : url("/Fonts/opensanssemibold.ttf");
+	src : url("Fonts/opensanssemibold.ttf");
 }
 
 @font-face {
 	font-family: "Open Sans";
 	font-style:italic;
 	font-weight:600;
-	src : url("/Fonts/opensanssemibolditalic.ttf");
+	src : url("Fonts/opensanssemibolditalic.ttf");
 }
 
 @font-face {
 	font-family: "Open Sans";
 	font-style:normal;
 	font-weight:700;
-	src : url("/Fonts/opensansbold.ttf");
+	src : url("Fonts/opensansbold.ttf");
 }
 
 @font-face {
 	font-family: "Open Sans";
 	font-style:italic;
 	font-weight:700;
-	src : url("/Fonts/opensansbolditalic.ttf");
+	src : url("Fonts/opensansbolditalic.ttf");
 }
 
 @font-face {
 	font-family: "Open Sans";
 	font-style:normal;
 	font-weight:800;
-	src : url("/Fonts/opensansextrabold.ttf");
+	src : url("Fonts/opensansextrabold.ttf");
 }
 
 @font-face {
 	font-family: "Open Sans";
 	font-style:italic;
 	font-weight:800;
-	src : url("/Fonts/opensansextrabolditalic.ttf");
+	src : url("Fonts/opensansextrabolditalic.ttf");
 }
 
 /*DEJA-VU SANS MONO*/
@@ -90,28 +90,28 @@
 	font-family: "Deja Vu Mono";
 	font-style:normal;
 	font-weight:400;
-	src : url("/Fonts/dejavusansmono.ttf");
+	src : url("Fonts/dejavusansmono.ttf");
 }
 
 @font-face {
 	font-family: "Deja Vu Mono";
 	font-style:italic;
 	font-weight:400;
-	src : url("/Fonts/dejavusansmonoitalic.ttf");
+	src : url("Fonts/dejavusansmonoitalic.ttf");
 }
 
 @font-face {
 	font-family: "Deja Vu Mono";
 	font-style:normal;
 	font-weight:700;
-	src : url("/Fonts/dejavusansmonobold.ttf");
+	src : url("Fonts/dejavusansmonobold.ttf");
 }
 
 @font-face {
 	font-family: "Deja Vu Mono";
 	font-style:italic;
 	font-weight:700;
-	src : url("/Fonts/dejavusansmonobolditalic.ttf");
+	src : url("Fonts/dejavusansmonobolditalic.ttf");
 }
 
 /*STYLES*/
@@ -212,11 +212,7 @@ blockquote {
 	font-size:1.3em;
 	line-height:1.42;
 	color:#FF0600;
-
-	
-	
 /*Margin-left and right is defined in %, as it then becomes relative to width, which is important for responsive design to e.g. mobile phones.*/
-
 	margin:1.5em 20% 1.5em 20%;
 	page-break-inside:avoid;
 }
@@ -238,7 +234,6 @@ a {
 
 a:link { color: #FF0600; text-decoration:underline; }
 a:visited { color: #FF0600; text-decoration:underline; }
-
 a:hover { color: #FF0600; text-decoration:underline; }
 a:active { color: #FF0600; text-decoration:none; }
 
@@ -255,7 +250,6 @@ a:active { color: #FF0600; text-decoration:none; }
 	margin:1.5em 20% 0 20%;
 	padding:1em;
 }
-
 
 /*Name: Caption*/
 figcaption {
@@ -307,7 +301,6 @@ figcaption {
 	font-weight: 700;
 	line-height:1.42;
 	color:#FF0600;
-
 }
 
 /*Name: Colophon*/
@@ -316,8 +309,6 @@ figcaption {
 	text-indent:0;
 	text-align:right;
 }
-
-
 
 /*INSERT ELEMENTS*/
 
@@ -335,6 +326,7 @@ ol {
 	-moz-hyphens: auto;
 	-webkit-hyphens: auto;
 }
+
 ul {
 	list-style:disc;
 	font-family: "Open Sans", sans-serif;
@@ -351,7 +343,7 @@ ul {
 
 /*Insert: Image*/
 img {
-	width: 80%;
+	width: 70%;
 	margin: 0 30% 0 0;
 	height: auto;
 	page-break-inside:avoid;
