--- a/public/create/stylesets/simple-bw.css
+++ b/public/create/stylesets/simple-bw.css
@@ -18,84 +18,84 @@
 	font-family:"Source Sans Pro";
 	font-style:normal;
 	font-weight:200;
-	src : url("/Fonts/sourcesansproextralight.otf");
+	src : url("Fonts/sourcesansproextralight.otf");
 }
 
 @font-face {
 	font-family:"Source Sans Pro";
 	font-style:italic;
 	font-weight:200;
-	src : url("/Fonts/sourcesansproextralightitalic.otf");
+	src : url("Fonts/sourcesansproextralightitalic.otf");
 }
 
 @font-face {
 	font-family:"Source Sans Pro";
 	font-style:normal;
 	font-weight:300;
-	src : url("/Fonts/sourcesansprolight.otf");
+	src : url("Fonts/sourcesansprolight.otf");
 }
 
 @font-face {
 	font-family:"Source Sans Pro";
 	font-style:italic;
 	font-weight:300;
-	src : url("/Fonts/sourcesansprolightitalic.otf");
+	src : url("Fonts/sourcesansprolightitalic.otf");
 }
 
 @font-face {
 	font-family:"Source Sans Pro";
 	font-style:normal;
 	font-weight:400;
-	src : url("/Fonts/sourcesansproregular.otf");
+	src : url("Fonts/sourcesansproregular.otf");
 }
 
 @font-face {
 	font-family:"Source Sans Pro";
 	font-style:italic;
 	font-weight:400;
-	src : url("/Fonts/sourcesansproitalic.otf");
+	src : url("Fonts/sourcesansproitalic.otf");
 }
 
 @font-face {
 	font-family:"Source Sans Pro";
 	font-style:normal;
 	font-weight:600;
-	src : url("/Fonts/sourcesansprosemibold.otf");
+	src : url("Fonts/sourcesansprosemibold.otf");
 }
 
 @font-face {
 	font-family:"Source Sans Pro";
 	font-style:italic;
 	font-weight:600;
-	src : url("/Fonts/sourcesansprosemibolditalic.otf");
+	src : url("Fonts/sourcesansprosemibolditalic.otf");
 }
 
 @font-face {
 	font-family:"Source Sans Pro";
 	font-style:normal;
 	font-weight:700;
-	src : url("/Fonts/sourcesansprobold.otf");
+	src : url("Fonts/sourcesansprobold.otf");
 }
 
 @font-face {
 	font-family:"Source Sans Pro";
 	font-style:italic;
 	font-weight:700;
-	src : url("/Fonts/sourcesansprobolditalic.otf");
+	src : url("Fonts/sourcesansprobolditalic.otf");
 }
 
 @font-face {
 	font-family:"Source Sans Pro";
 	font-style:normal;
 	font-weight:900;
-	src : url("/Fonts/sourcesansproblack.otf");
+	src : url("Fonts/sourcesansproblack.otf");
 }
 
 @font-face {
 	font-family:"Source Sans Pro";
 	font-style:italic;
 	font-weight:900;
-	src : url("/Fonts/sourcesansproblackitalic.otf");
+	src : url("Fonts/sourcesansproblackitalic.otf");
 }
 
 /*SOURCE CODE PRO*/
@@ -104,42 +104,42 @@
 	font-family:"Source Code Pro";
 	font-style:normal;
 	font-weight:200;
-	src : url("/Fonts/sourcecodeproextralight.otf");
+	src : url("Fonts/sourcecodeproextralight.otf");
 }
 
 @font-face {
 	font-family:"Source Code Pro";
 	font-style:normal;
 	font-weight:300;
-	src : url("/Fonts/sourcecodeprolight.otf");
+	src : url("Fonts/sourcecodeprolight.otf");
 }
 
 @font-face {
 	font-family:"Source Code Pro";
 	font-style:normal;
 	font-weight:400;
-	src : url("/Fonts/sourcecodeproregular.otf");
+	src : url("Fonts/sourcecodeproregular.otf");
 }
 
 @font-face {
 	font-family:"Source Code Pro";
 	font-style:normal;
 	font-weight:600;
-	src : url("/Fonts/sourcecodeprosemibold.otf");
+	src : url("Fonts/sourcecodeprosemibold.otf");
 }
 
 @font-face {
 	font-family:"Source Code Pro";
 	font-style:normal;
 	font-weight:700;
-	src : url("/Fonts/sourcecodeprobold.otf");
+	src : url("Fonts/sourcecodeprobold.otf");
 }
 
 @font-face {
 	font-family:"Source Code Pro";
 	font-style:normal;
 	font-weight:900;
-	src : url("/Fonts/sourcecodeproblack.otf");
+	src : url("Fonts/sourcecodeproblack.otf");
 }
 
 /*STYLES*/
