--- a/public/create/stylesets/non-editable.css
+++ b/public/create/stylesets/non-editable.css
@@ -57,6 +57,28 @@ h6 + h6 {
 	margin:0;
 }
 
+h1 + p {
+	margin-top:0;
+}
+
+h2 + p {
+	margin-top:0;
+}
+
+h3 + p {
+	margin-top:0;
+}
+
+h5 + p {
+	margin-top:0;
+}
+
+h6 + p {
+	margin-top:0;
+}
+
+
+
 strong {
 	font-weight: 700;
 }
