--- a/public/create/stylesets/light-bw.css
+++ b/public/create/stylesets/light-bw.css
@@ -119,7 +119,7 @@ p {
 
 /*Name: Quote*/
 blockquote {
-	quotes: "\203A" "\2039" "\2018" "\2019";
+	/*quotes: "\203A" "\2039" "\2018" "\2019";*/
 	font-family: "Rambla", sans-serif;
 	font-style: italic;
 	font-weight: 700;
@@ -136,7 +136,7 @@ blockquote {
 
 /*Name: Speech*/
 q { 
-	quotes: "\203A" "\2039" "\2018" "\2019";
+	/*quotes: "\203A" "\2039" "\2018" "\2019";*/
 	font-style:italic;
 }
 
