--- a/public/create/stylesets/book-color.css
+++ b/public/create/stylesets/book-color.css
@@ -123,7 +123,7 @@ p {
 
 /*Name: Quote*/
 blockquote {
-	quotes: "\00BB" "\00AB" "\203A" "\2039";
+	/*quotes: "\00BB" "\00AB" "\203A" "\2039";*/
 	font-family: "Junicode", serif;
 	font-style: italic;
 	font-weight: 700;
@@ -142,7 +142,7 @@ blockquote {
 
 /*Name: Speech*/
 q { 
-	quotes: "\00BB" "\00AB" "\203A" "\2039";
+	/*quotes: "\00BB" "\00AB" "\203A" "\2039";*/
 	font-style:italic;
 }
 
