--- a/public/create/stylesets/light-color.css
+++ b/public/create/stylesets/light-color.css
@@ -119,7 +119,7 @@ p {
 
 /*Name: Quote*/
 blockquote {
-	quotes: "\203A" "\2039" "\2018" "\2019";
+	/*quotes: "\203A" "\2039" "\2018" "\2019";*/
 	font-family: "Rambla", sans-serif;
 	font-style: italic;
 	font-weight: 700;
@@ -137,7 +137,7 @@ margin:1.5em 30% 1.5em 0%;
 
 /*Name: Speech*/
 q { 
-	quotes: "\203A" "\2039" "\2018" "\2019";
+	/*quotes: "\203A" "\2039" "\2018" "\2019";*/
 	font-style:italic;
 }
 
