--- a/public/create/stylesets/non-editable.css
+++ b/public/create/stylesets/non-editable.css
@@ -13,7 +13,8 @@ body {
 /*Margin is added to body to avoid text being directly on the edge of ebook-readers taking css seriously (which is increasingly few - I'm looking at you apple). But just a litte, to preserve screen estate in most usage scenarios. But it might conflict with e.g. wanting to define a backgroundcolor edge to edge ...*/
 }
 
-q:before { 
+/*CSS controlled quote glyphs are disabled for the time being since it does not play nice with the editor*/
+/*q:before { 
 	content: open-quote;
  }
 q:after  { 
@@ -25,7 +26,7 @@ content: open-quote;
  }
 blockquote:after  { 
 content: close-quote;
-}
+}*/
 
 blockquote p {
 	margin:0;
