--- a/public/create/stylesets/open-color.css
+++ b/public/create/stylesets/open-color.css
@@ -120,7 +120,7 @@ p {
 
 /*Name: Quote*/
 blockquote {
-	quotes: "\00BB" "\00AB" "\203A" "\2039";
+	/*quotes: "\00BB" "\00AB" "\203A" "\2039";*/
 	font-family: "Open Sans", sans-serif;
 	font-style: italic;
 	font-weight: 800;
@@ -136,7 +136,7 @@ blockquote {
 
 /*Name: Speech*/
 q { 
-	quotes: "\00BB" "\00AB" "\203A" "\2039";
+	/*quotes: "\00BB" "\00AB" "\203A" "\2039";*/
 	font-style:italic;
 }
 
