--- a/public/create/stylesets/pleasant-color.css
+++ b/public/create/stylesets/pleasant-color.css
@@ -119,7 +119,7 @@ p {
 
 /*Name: Quote*/
 blockquote {
-	quotes: "\00BB" "\00AB" "\203A" "\2039";
+	/*quotes: "\00BB" "\00AB" "\203A" "\2039";*/
 	font-family: "Source Sans Pro", sans-serif;
 	font-style: italic;
 	font-weight: 700;
@@ -134,7 +134,7 @@ blockquote {
 
 /*Name: Speech*/
 q { 
-	quotes: "\00BB" "\00AB" "\203A" "\2039";
+	/*quotes: "\00BB" "\00AB" "\203A" "\2039";*/
 	font-style:italic;
 	font-weight: 600;
 }
