--- a/public/create/stylesets/simple-color.css
+++ b/public/create/stylesets/simple-color.css
@@ -84,7 +84,7 @@ p {
 
 /*Name: Quote*/
 blockquote {
-	quotes: "\201C" "\201D" "\2018" "\2019";
+	/*quotes: "\201C" "\201D" "\2018" "\2019";*/
 	font-family: "Source Sans Pro", sans-serif;
 	font-style: italic;
 	font-weight: 600;
@@ -102,7 +102,7 @@ blockquote {
 
 /*Name: Speech*/
 q { 
-	quotes: "\201C" "\201D" "\2018" "\2019";
+	/*quotes: "\201C" "\201D" "\2018" "\2019";*/
 	font-style:italic;
 }
 
